2004-11-19  Joe Shaw  <joeshaw@novell.com>

	* mono/GMime.metadata: Don't autogenerate get GetDate method

	* mono/Message.custom: Implement it by hand and return a DateTime.

2004-11-17  Joe Shaw  <joeshaw@novell.com>

	* mono/GMime.metadata: More metadata goodness.

	* mono/Makefile.am: Added Object.custom and Stream.custom.

	* mono/Object.custom: Add a GetData() method which returns a byte
	array of the object's data.

	* mono/Stream.custom: Add a wrapper around Seek() so that you
	don't need to specify whence.

2004-11-16  Joe Shaw  <joeshaw@novell.com>

	* configure.in: Generate mono/gmime-sharp.pc.

	* mono/GMime.metadata: Convert all ssize_t and off_t values to
	ints in C#, since they're not automatically handled by the
	generator right now.

	* mono/Makefile.am: Install the gmime-sharp stuff as gmime-sharp
	and not gmime.

	* mono/gmime-sharp.pc.in: Added.  pkgconfig file for the mono
	bindings.

2004-11-16  Joe Shaw  <joeshaw@novell.com>

	* Makefile.am: iconv-detect.h should be in DISTCLEANFILES, not
	CLEANFILES, or else the build fails following a "make clean"
	unless you re-autogen.

	* gmime/internet-address.[ch]: Added functions
	internet_address_list_next() and
	internet_address_list_get_address() since we can't poke at the
	structures by hand in mono.

	* mono/GMime.metadata: Remove a bunch of commented out stuff, hide
	the entire InternetAddressList structure.  We'd prefer to do it
	with .net datatypes.

	* mono/Message.custom: Added.  Adds a GetRecipients() method which
	returns an ICollection of InternetAddresses, and a
	GetRecipientsAsString() method which returns a stringified list
	for pretty printing.

	* mono/gmime-api.raw: Regenerate this for the new
	InternetAddress.GetAddress() and Next() methods.

2004-11-15  Joe Shaw  <joeshaw@novell.com>

	* Added a mono binding

	* configure.in: Add optional checks for mono and gtk-sharp.

	* Makefile.am: Build the mono subdir if enabled.
