@@ -25,6 +25,8 @@
 #include <config.h>
 #endif
 
+#define _POSIX_SOURCE
+
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
